<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    tools:context=".adminRegis">

    <EditText
        android:id="@+id/editText5"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="232dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_email_id"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        app:layout_constraintVertical_bias="0.259" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_password_atleast_6_characters"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered_login_here"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chonburi"
        android:text="@string/admin_registration"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_pharmacy_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="396dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_plot_no_and_street"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_place"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:padding="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.025" />

</androidx.constraintlayout.widget.ConstraintLayout>